--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,24 +27,9 @@ import Layout from "../layouts/Layout.astro";
 				></path><path d="M6 15l2 0"></path></svg
 			>
 		</MainButton>
-		<MainButton href="/ingresar-operario">
-			<p slot="label" >Ingresar operario</p>
-			<svg
-				slot="icon"
-				width="24"
-				height="24"
-				viewBox="0 0 24 24"
-				fill="none"
-				stroke="currentColor"
-				stroke-width="2"
-				stroke-linecap="round"
-				stroke-linejoin="round"
-				class="icon icon-tabler icons-tabler-outline icon-tabler-user-plus"
-				><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-					d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"></path><path
-					d="M16 19h6"></path><path d="M19 16v6"></path><path
-					d="M6 21v-2a4 4 0 0 1 4 -4h4"></path></svg
-			>
+		<MainButton href="/higiene-personal">
+			<p slot="label">Higiene Personal</p>
+			<svg slot="icon" width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-bath"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 12h16a1 1 0 0 1 1 1v3a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4v-3a1 1 0 0 1 1 -1z" /><path d="M6 12v-7a2 2 0 0 1 2 -2h3v2.25" /><path d="M4 21l1 -1.5" /><path d="M20 21l-1 -1.5" /></svg>
 		</MainButton>
 	</nav>
 </Layout>
