se agrego control y monitoreo de plagas

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,6 +31,7 @@ import logoCelifrut from '../assets/CELIFRUT-removebg-preview.png'
         justify-content: space-between;
         padding: 14px;
         align-items: center;
+        color: black;
     }
     button{
         background-color: rgb(255, 255, 255);
